# Rama-AI--Local-LLM-for-Mobile

./: Readme.md
RAMA-APP/: Readme.md
RAMA-APP/docs/: ARCHITECTURE.md  Final_year_Project_Report_8th_semester_report.docx  Technical-report.md  Update.Md
RAMA-APP/docs/PPT/: RAMA_AI_Presentation.pptx
RAMA-APP/rama_ai/: .gitignore  BUILD_ERROR_FIX.md  README.md  build_error.txt  pubspec.yaml
RAMA-APP/rama_ai/android/app/: build.gradle.kts
RAMA-APP/rama_ai/android/app/src/main/cpp/: .clangd  CMakeLists.txt  compile_flags.txt  wrapper.cpp
RAMA-APP/rama_ai/ios/Runner/: Info.plist
RAMA-APP/rama_ai/ios/Runner.xcodeproj/: project.pbxproj
RAMA-APP/rama_ai/lib/: llm_service.dart  main.dart  model_manager_screen.dart
RAMA-APP/rama_ai/lib/core/: app_theme.dart  chat_controller.dart
RAMA-APP/rama_ai/lib/screens/: chat_screen.dart  entry_point.dart  model_manager_screen.dart  profile_setup_screen.dart  settings_screen.dart  splash_screen.dart
RAMA-APP/rama_ai/lib/services/: hardware_info.dart  llm_service.dart
RAMA-APP/rama_ai/lib/storage/: chat_storage.dart
RAMA-APP/rama_ai/lib/utils/: response_cleaner.dart
RAMA-APP/rama_ai/lib/widgets/: shared_widgets.dart
RAMA-APP/rama_ai/linux/: CMakeLists.txt
RAMA-APP/rama_ai/linux/runner/: my_application.cc
RAMA-APP/rama_ai/macos/Flutter/: GeneratedPluginRegistrant.swift
RAMA-APP/rama_ai/macos/Runner.xcodeproj/: project.pbxproj
RAMA-APP/rama_ai/test/: widget_test.dart
RAMA-APP/rama_ai/web/: index.html  manifest.json
RAMA-APP/rama_ai/windows/: CMakeLists.txt
llama.cpp/examples/llama.android/: README.md
(+15 files in other folders)
